fix layout to remove side category bar on mobile

--- a/components/MoviesLayout/MoviesLayout.module.scss
+++ b/components/MoviesLayout/MoviesLayout.module.scss
@@ -2,13 +2,10 @@
 
 .moviesLayout {
   background-color: var(--blackColor200);
-  padding: 100px 50px;
+  padding: 100px 20px;
   color: white;
   display: flex;
   justify-content: center;
-  @include xxl {
-    padding: 100px 20px;
-  }
 }
 
 .moviesContent {
