--- a/pages/movies/Movies.module.scss
+++ b/pages/movies/Movies.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   gap: 80px;
   padding: 0 20px;
-  margin-left: 235px;
+  margin-left: 0;
   @include xxl {
     margin-left: 277px;
   }
